# semantic_kernel_issue

./: README.md  pyproject.toml  scripts.py
semantic_kernel_issue/: __main__.py  helpers.py  prompt.txt
